Avoid using Axis base64 decoder in favor of sun version
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@3296 219f1c6e-4a0e-43c8-96f2-6e749be13fd4